--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,7 +12,7 @@ main{
     height: 600px;
     flex-shrink: 0;
     border-radius: 16px;
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),url("Banner\ Image.png");
     margin-top: 50px;
     position: relative;
     
@@ -84,5 +84,131 @@ font-weight: 700;
 line-height: normal;
 margin-top: 0;
 }
+/* MID Night Party */
+.midnight-party{
+width: 1320px;
+height: 600px;
+flex-shrink: 0;
+display: flex;
+position: relative;
+justify-content: space-between;
+background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%),url("Vectorrr.png");
+}
+.midnight-party-content{
+    margin-left: 0;
+    position: absolute;
+    justify-content: space-between;
+    margin-top: 126px;
+    margin-left: 126px;
+}
+.midnight-party-welcome{
+width: 642px;
+color: #FFF;
+font-family: Merriweather;
+font-size: 64px;
+font-style: normal;
+font-weight: 900;
+line-height: 88px; /* 137.5% */
+letter-spacing: 7.04px;
+
+}
+.midnight-party-description{
+width: 697px;
+color: rgba(255, 255, 255, 0.80);
+font-family: Inter;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+
+}
+.join-now{
+color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+margin-right: 550px;
+}
+
+.twenty-four-img{
+    position: absolute;
+    margin-left: 856px;
+    margin-top: 83px;
+    display: flex;
+}
+
+/* location portion */
+
+.location{
+    width: 1320px;
+    height: 600px;
+    flex-shrink: 0;
+    /* background-color: tomato; */
+    
+    margin-top: 120px;
+    border-radius: 10px;
+    position: relative;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    
+}
+.location-content{
+    width: 550px;
+    height: 168px;
+    margin-left: 385px;
+    margin-top: 100px;
+    position: absolute;
+
+    
+    
+}
+.place{
+color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px; /* 175% */
+text-transform: capitalize;
+}
+.location-content-title{
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+    margin: 0;
+    align-items: center;
+}
+.join-now-button{
+width: 167px;
+height: 56px;
+align-items: center;
+border-radius: 8px;
+background: #F00;
+margin-left: 156px;
+margin-top: 48px;
+
+
+}
+button{
+color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+justify-content: center;
+border-radius: 8px;
+}
+
+
 
 
