--- a/Styles/style.css
+++ b/Styles/style.css
@@ -297,6 +297,7 @@ margin-bottom: 0;
 margin-top: 120px;
 /* width: 1600px;
 height: 7335px; */
+margin: auto;
 }
 .grid-content{
 width: 896px;
@@ -349,8 +350,76 @@ margin-left: 0;
     height: 100%;
     width: 100%;
 }
+/* Subscriber-Section */
+.subscribe-section{
+width: 1320px;
+height: 616px;
+flex-shrink: 0;
+border-radius: 16px;
+background: rgba(255, 0, 0, 0.05);
+margin-top: 120px;
+position: relative;
+display: flex;
+}
+/* .subscriber-content{
+    width: 896px;
+    position: absolute;
+    justify-content: center;
+    margin: auto;
+} */
+.sebscriber-image{
+    width: 150px;
+    height: 150px;
+    flex-shrink: 0;
+    align-items: center;
+    margin-top: 80px;
+    margin-left: 585px;
+}
+.subscriber-title{
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-top: 40px;
+    margin-left: 180px;
 
-
-
+}
+.subscriber-description{
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+    margin-top: 22px;
+    width: 883px;
+    margin: auto;
+    margin-left: 250px;
+}
+.subscribe-button{
+border-radius: 0px 50px 50px 0px;
+background: #F00;
+width: 210px;
+height: 72px;
+flex-shrink: 0;
+border-color: white;
+align-items: center;
+}
+.subscribe-input{
+    border-radius: 50px;
+background: #FFF;
+width: 648px;
+height: 72px;
+flex-shrink: 0;
+}
+.subscriber-content input{
+    margin-top: 48px;
+    margin-left: 336px;
+}
 
 
